--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 pipeline:
   build:
     image: plugins/docker
-    tags: latest
+    auto_tag: true
     commands:
       - docker build .
   publish:        
